--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./index.css" type="text/css">
 </head>
 <body>
-    <div id="app" class="main-page">
+    <div id="app" class="main-page" v-cloak>
         <!-- 搜索 -->
         <div class="home-search flex-row">
             <img class="home-search-logo" src="../../assets/img/logo.png" alt="logo">
