--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./index.css" type="text/css">
 </head>
 <body>
-    <div class="page-loading">加载动画...</div>
+    <div class="page-loading" style="color: #eee">加载动画...</div>
     <div id="app" class="main-page" v-cloak>
         <!-- 搜索 -->
         <div class="home-search flex-row">
