--- a/pages/loading/index.html
+++ b/pages/loading/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../common/css/public.css" type="text/css">
 </head>
 <body>
-    加载中...
+    <span style="color:#eee">加载中...</span>
     <script src="../../common/js/public.js"></script>
     <script>
         window.onload = () => {
