--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -14,7 +14,7 @@
     
     <div id="app" class="main-page" v-cloak>
         <!-- 搜索 -->
-        <div class="home-search flex-row">
+        <div class="home-search flex-row bg-white">
             <img class="home-search-logo" :src="imgs.logo" alt="logo">
             <div class="home-search-box flex-1">
                 <input v-model="search" type="text" placeholder="搜您想搜 看您想看">
@@ -34,7 +34,7 @@
             </div>
         </div>
         <!-- banner -->
-        <div class="home-banner">
+        <div class="home-banner bg-white">
             <com-banner></com-banner>
         </div>
         <!-- 广告 -->
@@ -44,7 +44,7 @@
             </div>
         </div>
         <!-- 精选广告 -->
-        <div class="home-push">
+        <div class="home-push bg-white">
             <div class="home-push-title flex-row">
                 <div class="home-push-name flex-1">澳门新葡京</div>
                 <div class="home-push-btn">多种玩法</div>
@@ -79,7 +79,7 @@
             </div>
         </div>
         <!-- 精选广告 -->
-        <div class="home-push">
+        <div class="home-push bg-white">
             <div class="home-push-title flex-row">
                 <div class="home-push-name flex-1">澳门新葡京</div>
                 <div class="home-push-btn">多种玩法</div>
