--- a/pages/loading/index.html
+++ b/pages/loading/index.html
@@ -4,15 +4,64 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>猫咪</title>
+    <!-- 引入公共样式 -->
     <link rel="stylesheet" href="../../common/css/public.css" type="text/css">
+    <!-- 引入本页样式 -->
+    <link rel="stylesheet" href="./index.css" type="text/css">
 </head>
 <body>
     <div class="page-loading"></div>
+    <div id="app" class="page-loading-curr" v-cloak>
+        <div class="page-loading-title-1 din">{{title1}}</div>
+        <div class="page-loading-title-2"><span class="page-loading-up">⇧ ⇧ ⇧ 請</span>牢記本站最新網<span class="page-loading-up">址 ⇧ ⇧ ⇧</span></div>
+        <img :src="imgs.top" class="page-loading-top" alt="top">
+        <img :src="imgs.btn" class="page-loading-btn" alt="btn" @click="handleIn">
+        <div class="page-loading-buttons">
+            <div class="page-loading-bs-item">
+                <span>保存</span>
+                <span>二维码</span>
+                <img class="page-loading-bs-img" :src="imgs.qrcode" alt="o">
+            </div>
+            <div class="page-loading-bs-item">
+                <span>永久访问教程</span>
+                <img class="page-loading-bs-img" :src="imgs.book" alt="o">
+            </div>
+        </div>
+        <div class="page-loading-banner">
+            <img :src="imgs.banner1" alt="banner">
+            <div class="page-loading-banner-text">
+                ♚皇冠现金网♚ 500万担保☛点击
+            </div>
+        </div>
+        <div class="page-loading-banner">
+            <img :src="imgs.banner2" alt="banner">
+            <div class="page-loading-banner-text">
+                『澳门金沙』猫咪担保赌场
+            </div>
+        </div>
+        <img :src="imgs.logo" alt="logo" class="page-loading-logo">
+        <div class="page-loading-info" style="margin-bottom:1rem">
+            貓咪網海外(翻墻)永久網址 www.maomiav.com 
+            本站經常更換網站域名，請收藏10個以上最新域名
+            才可保證永久訪問本站！
+        </div>
+        <div class="page-loading-info" style="margin-bottom:2rem">
+            如果點擊進入後打不開本站，請換（電信或聯通）
+            網絡在訪問本站，移動網絡頻繁屏蔽本站～
+        </div>
+        <div class="page-loading-info" style="margin-bottom:1.2rem">
+            本站經常會更換域名,請多記幾個本站域名防止失聯
+        </div>
+        <div class="page-loading-warning">
+            <div style="font-size:1.8rem">警告 / WARNING</div>
+            <div style="font-size:1.6rem">本物品內容可能令人反感；不可將本物品內容派發，傳閱，出售，出租，交給或出借予年齡未滿 18 歲的人士出示，播放或播映。</div>
+            <div style="font-size:1.4rem">THIS ARTICLE CONTAINS MATERIAL WHICH MAY OFFERND AND MAY NOT BE DISTRIBUTED, CIRCULATED, SOLD, HIRED, GIVEN, LENT, SHOWN, 
+                PLAYED OR PROJECTED TO A PERSON UNDER THE AGE OF 18 YEARS. ALL MODELS ARE 18 OR OLDER.</div>
+        </div>
+    </div>
+    <!-- 引入公共脚本 -->
     <script src="../../common/js/public.js"></script>
-    <script>
-        window.onload = () => {
-            window.location.replace('../home/index.html')
-        }
-    </script>
+    <!-- 引入本页脚本 -->
+    <script src="./index.js"></script>
 </body>
 </html>
