--- a/pages/loading/index.html
+++ b/pages/loading/index.html
@@ -36,7 +36,7 @@
         <div class="page-loading-banner">
             <img :src="imgs.banner2" alt="banner">
             <div class="page-loading-banner-text">
-                『澳门金沙』猫咪担保赌场
+                『澳门金沙』猫咪担保赌场❥进入
             </div>
         </div>
         <img :src="imgs.logo" alt="logo" class="page-loading-logo">
@@ -49,7 +49,7 @@
             如果點擊進入後打不開本站，請換（電信或聯通）
             網絡在訪問本站，移動網絡頻繁屏蔽本站～
         </div>
-        <div class="page-loading-info" style="margin-bottom:1.2rem">
+        <div class="page-loading-info" style="margin-bottom:1.2rem;font-weight: 400">
             本站經常會更換域名,請多記幾個本站域名防止失聯
         </div>
         <div class="page-loading-warning">
