--- a/pages/demo/index.html
+++ b/pages/demo/index.html
@@ -11,6 +11,9 @@
 </head>
 <body>
     <div class="page-loading"></div>
+    <div id="app">
+        <img :src="src" alt="">
+    </div>
     <!-- 引入公共脚本 -->
     <script src="../../common/js/public.js"></script>
     <!-- 引入本页脚本 -->
