--- a/pages/loading/index.html
+++ b/pages/loading/index.html
@@ -13,7 +13,7 @@
     <div class="page-loading"></div>
     <div id="app" class="page-loading-curr" v-cloak>
         <div class="page-loading-title-1 din">{{title1}}</div>
-        <div class="page-loading-title-2"><span class="page-loading-up">⇧ ⇧ ⇧ 請</span>牢記本站最新網<span class="page-loading-up">址 ⇧ ⇧ ⇧</span></div>
+        <div class="page-loading-title-2"><span class="page-loading-up">⇧ ⇧ ⇧ <span style="font-size:1.2rem">請</span></span>牢記本站最新網<span class="page-loading-up"><span style="font-size:1.2rem">址</span> ⇧ ⇧ ⇧</span></div>
         <img :src="imgs.top" class="page-loading-top" alt="top">
         <img :src="imgs.btn" class="page-loading-btn" alt="btn" @click="handleIn">
         <div class="page-loading-buttons">
@@ -41,7 +41,7 @@
         </div>
         <img :src="imgs.logo" alt="logo" class="page-loading-logo">
         <div class="page-loading-info" style="margin-bottom:1rem">
-            貓咪網海外(翻墻)永久網址 www.maomiav.com 
+            貓咪網海外(翻墻)永久網址 WWW.MAOMIAV.COM 
             本站經常更換網站域名，請收藏10個以上最新域名
             才可保證永久訪問本站！
         </div>
