--- a/pages/loading/index.html
+++ b/pages/loading/index.html
@@ -7,7 +7,7 @@
     <!-- 引入公共样式 -->
     <link rel="stylesheet" href="../../common/css/public.css" type="text/css">
     <!-- 引入本页样式 -->
-    <link rel="stylesheet" href="./index.css" type="text/css">
+    <link rel="stylesheet" href="./index.1.0.2.css" type="text/css">
 </head>
 <body>
     <div class="page-loading"></div>
@@ -62,6 +62,6 @@
     <!-- 引入公共脚本 -->
     <script src="../../common/js/public.js"></script>
     <!-- 引入本页脚本 -->
-    <script src="./index.js"></script>
+    <script src="./index.1.0.2.js"></script>
 </body>
 </html>
