--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -7,7 +7,7 @@
     <!-- 引入公共样式 -->
     <link rel="stylesheet" href="../../common/css/public.css" type="text/css">
     <!-- 引入本页样式 -->
-    <link rel="stylesheet" href="./index.1.0.4.css" type="text/css">
+    <link rel="stylesheet" href="./index.1.0.5.css" type="text/css">
 </head>
 <body>
     <div class="page-loading"></div>
@@ -82,9 +82,9 @@
         <div class="home-push bg-white">
             <div class="home-push-title flex-row">
                 <div class="home-push-name flex-1">澳门新葡京</div>
-                <div class="home-push-btn">多种玩法</div>
-                <div class="home-push-btn">美女陪玩</div>
-                <div class="home-push-btn">极速到账</div>
+                <div class="home-push-btn"><span>多种玩法</span></div>
+                <div class="home-push-btn"><span>美女陪玩</span></div>
+                <div class="home-push-btn"><span>极速到账</span></div>
             </div>
             <div class="home-push-info flex-row">
                 <div class="home-push-info-name din">官网直营 注册就送8888元</div>
@@ -179,6 +179,6 @@
     <!-- 引入公共脚本 -->
     <script src="../../common/js/public.js"></script>
     <!-- 引入本页脚本 -->
-    <script src="./index.1.0.4.js"></script>
+    <script src="./index.1.0.5.js"></script>
 </body>
 </html>
