--- a/pages/find/index.html
+++ b/pages/find/index.html
@@ -25,8 +25,7 @@
             <span class="page-find-hs-title">猫咪热搜：</span>
             <div class="page-find-hs-box">
                 <div class="page-find-hs-item" v-for="(item, i) in hotSearchs" :key="i">
-                    <span>{{i + 1}}&nbsp;</span>
-                    <span class="page-find-hs-item-text">{{item.title}}</span>
+                    <span class="page-find-hs-item-text">{{i + 1}}&nbsp;{{item.title}}</span>
                     <span class="page-find-hs-item-icon page-find-hs-item-hot" v-if="item.isHot">热</span>
                     <span class="page-find-hs-item-icon page-find-hs-item-new" v-if="item.isNew">新</span>
                 </div>
